# 01_django_project

./: .gitignore  pyproject.toml
django_project/django_project/: settings.py
